{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 271,
  "lineage": "79cdf35e-4688-e39a-fb62-afc53d52d6ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0480b65ad6180be9e",
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:elastic-ip/eipalloc-0480b65ad6180be9e",
            "association_id": "eipassoc-057d9cb2b64f0edcb",
            "domain": "vpc",
            "id": "eipalloc-0480b65ad6180be9e",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-07376b458fce2dcc2",
            "private_dns": "ip-10-0-1-115.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.115",
            "public_dns": "ec2-54-254-242-53.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.242.53",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08e7e250e7e3deb9b",
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:instance/i-0ce41b67b4dd669b4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce41b67b4dd669b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "web-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d3a6c75c23892692",
            "private_dns": "ip-10-0-1-182.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.182",
            "public_ip": "13.213.78.37",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e8e189364113fa43",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ff00c017262ba28c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07cc0e2b7d0900d9b",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff00c017262ba28c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.web",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08e7e250e7e3deb9b",
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:instance/i-049f426fb34f7cc81",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049f426fb34f7cc81",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0063a6cd7f688bba9",
            "private_dns": "ip-10-0-3-179.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.179",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b33665f388f0c4ab",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0930a85031a805009",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f222ce0313105c5d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mydb",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_key_pair.web",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.rds_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:internet-gateway/igw-0567137c3c1072b6a",
            "id": "igw-0567137c3c1072b6a",
            "owner_id": "569096451831",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:loadbalancer/app/app-alb/6b6d97cb58fd743d",
            "arn_suffix": "app/app-alb/6b6d97cb58fd743d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-alb-99117395.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:loadbalancer/app/app-alb/6b6d97cb58fd743d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-0236bcb76c3afbc9f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05e92e2beb2c030b2"
              },
              {
                "subnet_id": "subnet-07cc0e2b7d0900d9b"
              }
            ],
            "subnets": [
              "subnet-05e92e2beb2c030b2",
              "subnet-07cc0e2b7d0900d9b"
            ],
            "tags": {
              "Name": "app-alb"
            },
            "tags_all": {
              "Name": "app-alb"
            },
            "vpc_id": "vpc-062c1ea13d5aa35db",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:loadbalancer/app/app-alb/6b6d97cb58fd743d"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:listener/app/app-alb/6b6d97cb58fd743d/54442f866113c492",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:targetgroup/web-tg/e8697d97735d4642",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:listener/app/app-alb/6b6d97cb58fd743d/54442f866113c492",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:loadbalancer/app/app-alb/6b6d97cb58fd743d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:listener/app/app-alb/6b6d97cb58fd743d/54442f866113c492"
          },
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:targetgroup/web-tg/e8697d97735d4642",
            "arn_suffix": "targetgroup/web-tg/e8697d97735d4642",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:targetgroup/web-tg/e8697d97735d4642",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:loadbalancer/app/app-alb/6b6d97cb58fd743d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:targetgroup/web-tg/e8697d97735d4642"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:targetgroup/web-tg/e8697d97735d4642-20250810143418546800000007",
            "port": 80,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:569096451831:targetgroup/web-tg/e8697d97735d4642",
            "target_id": "i-049f426fb34f7cc81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mydb",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_instance.web_server",
            "aws_key_pair.web",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.rds_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0480b65ad6180be9e",
            "association_id": "eipassoc-057d9cb2b64f0edcb",
            "connectivity_type": "public",
            "id": "nat-0fcda8f0baa46f259",
            "network_interface_id": "eni-07376b458fce2dcc2",
            "private_ip": "10.0.1.115",
            "public_ip": "54.254.242.53",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07cc0e2b7d0900d9b",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:route-table/rtb-048877866ac634a60",
            "id": "rtb-048877866ac634a60",
            "owner_id": "569096451831",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fcda8f0baa46f259",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:route-table/rtb-00b308a1ba94318e2",
            "id": "rtb-00b308a1ba94318e2",
            "owner_id": "569096451831",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0567137c3c1072b6a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6bcc0da9b9f59cb",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-048877866ac634a60",
            "subnet_id": "subnet-0930a85031a805009"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6e8997a56ebd0cf",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-00b308a1ba94318e2",
            "subnet_id": "subnet-05e92e2beb2c030b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1cdb52a71582dba",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-00b308a1ba94318e2",
            "subnet_id": "subnet-07cc0e2b7d0900d9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:security-group/sg-0236bcb76c3afbc9f",
            "description": "Allow HTTP traffic from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0236bcb76c3afbc9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "569096451831",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:security-group/sg-0ff00c017262ba28c",
            "description": "Allow SSH from your IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff00c017262ba28c",
            "ingress": [
              {
                "cidr_blocks": [
                  "180.74.219.19/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "569096451831",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:security-group/sg-0569c0febea65619b",
            "description": "Allow MySQL access from Web Server SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0569c0febea65619b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f222ce0313105c5d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "569096451831",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:security-group/sg-0f222ce0313105c5d",
            "description": "Allow HTTP from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f222ce0313105c5d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ff00c017262ba28c"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0236bcb76c3afbc9f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-server-sg",
            "name_prefix": "",
            "owner_id": "569096451831",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-4090117538",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0f222ce0313105c5d",
            "security_group_rule_id": "sgr-0d675299766855c23",
            "self": false,
            "source_security_group_id": "sg-0ff00c017262ba28c",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:subnet/subnet-0930a85031a805009",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0930a85031a805009",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569096451831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:subnet/subnet-0398cce5fc1311734",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0398cce5fc1311734",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569096451831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:subnet/subnet-07cc0e2b7d0900d9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cc0e2b7d0900d9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569096451831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:subnet/subnet-05e92e2beb2c030b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e92e2beb2c030b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569096451831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-062c1ea13d5aa35db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:569096451831:vpc/vpc-062c1ea13d5aa35db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06915b407a8e3abef",
            "default_route_table_id": "rtb-0e6689782a7d29a50",
            "default_security_group_id": "sg-07a63bdd6c88657a4",
            "dhcp_options_id": "dopt-b4d246d3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062c1ea13d5aa35db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6689782a7d29a50",
            "owner_id": "569096451831",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}